# Ego-Loong-Live

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  THIRD_PARTY.md  pyproject.toml  requirements.txt
backend/: __init__.py  acquisition_manager.py  config.py  data_store.py  hand_pose_processor.py  image_processor.py  main.py  mock_data.py  models.py  ros_node.py  system_monitor.py  tactile_bend_decoupler.py  tactile_processor.py  websocket_manager.py
config/: config.yaml  device01.yaml  device02.yaml  retarget_hand_config.reference.json
config/tactile/: joint_decouple_calib_left.npz  joint_decouple_calib_right.npz
docker/: entrypoint.sh
docs/: interface_audit.md
frontend/: dashboard.html  index.html
frontend/assets/models/: README.md
frontend/css/: hand-cute.css  rgb-frame.css  style.css
frontend/js/: acquisition_view.js  app.js  hand_view.js  navigation.js  rgb_view.js  system_view.js  tactile_view.js  websocket.js
frontend/js/hand/: hand_camera.js  hand_debug_skeleton.js  hand_joint_mapping.js  hand_material.js  hand_model_loader.js  hand_surface_geometry.js  hand_tactile_overlay.js  thumb_visual_mapping.js
hand_msg_ws/src/hand_frame/: CMakeLists.txt  package.xml
hand_msg_ws/src/hand_frame/msg/: HandFrame.msg  HandImuSample.msg
scripts/: calibrate_tactile_bend.py  check_topics.sh  diagnose.sh  docker_dual.sh  install.sh  rgb_low_latency_republisher.py  run.sh  run_mock.sh
tests/: test_config.py  test_hand_mapping.py  test_hand_surface.py  test_tactile_mapping.py  test_websocket.py
