[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ego-loong-live"
version = "0.1.0"
description = "First-person ROS 2 acquisition real-time visualization"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "PyYAML>=6,<7",
  "psutil>=5.9,<8",
  "websockets>=12,<16",
]

[tool.setuptools]
packages = ["backend"]
