<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_frame</name>
  <version>0.0.0</version>
  <description>Hand IMU + pressure + joint angles merged message definition</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>